Upgrade to Java 11 + update dependencies + adapt to Prometheus evolution